Config Db/Redis/Migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=app.db"
+    "AZURE_SQL_CONNECTIONSTRING": "Data Source=app.db"
   },
   "Logging": {
     "LogLevel": {
